Adjust grid col & row templates, add dash styling.

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 }
 .main-container {
     display: grid;
-    grid-template-columns: repeat(8, 1fr);
+    grid-template-columns: repeat(8, minmax(100px, 1fr));
     grid-template-rows: repeat(8, 1fr);
     background-color: rgb(237, 236, 236);
     color: rgb(41, 39, 39);
@@ -32,6 +32,7 @@
     grid-column-end: 9;
     grid-row-start: 1;
     grid-row-end: 3;
+    /*max-height: 250px;*/
 }
 .projects {
     grid-column-start: 3;
@@ -59,7 +60,6 @@
     width: 30%;
     height: auto;
     flex: 1 1 auto;
-    
 }
 .projects > h1 {
     width: 100%;
@@ -81,3 +81,12 @@
     border: none;
     margin: 0;
 }
+.menu-item {
+    font-size: 24px;
+    font-weight: bold;
+    width: 100%;
+}
+.bottom-menu {
+    margin-top: 50px;
+}
+
