--- a/styles.css
+++ b/styles.css
@@ -7,18 +7,27 @@
 }
 .main-container {
     display: grid;
-    grid-template-columns: repeat(8, minmax(100px, 1fr));
-    grid-template-rows: repeat(8, 1fr);
+    grid-template-columns: repeat(10, minmax(100px, 1fr));
+    grid-template-rows: repeat(6, minmax(1fr, 250px));
     background-color: rgb(237, 236, 236);
     color: rgb(41, 39, 39);
+}
+.border-panel {
+    background-color: rgb(217, 213, 213);
+}
+.left-border-panel {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 7;
 }
 .dashboard-menu {
     background-color: rgb(26, 171, 243);
     color: rgb(245, 251, 255);
-    grid-column-start: 1;
-    grid-column-end: 3;
+    grid-column-start: 2;
+    grid-column-end: 4;
     grid-row-start: 1;
-    grid-row-end: 9;
+    grid-row-end: 7;
     padding: 20px;
 }
 .admin-bar, .project-tile, .project-title, .side-content-tile {
@@ -28,43 +37,53 @@
     color: rgb(153, 149, 149);
 }
 .admin-bar {
-    grid-column-start: 3;
-    grid-column-end: 9;
+    grid-column-start: 4;
+    grid-column-end: 10;
     grid-row-start: 1;
-    grid-row-end: 3;
-    /*max-height: 250px;*/
+    grid-row-end: 2;
+    max-height: 250px;
 }
 .projects {
-    grid-column-start: 3;
-    grid-column-end: 7;
-    grid-row-start: 3;
-    grid-row-end: 9;
+    grid-column-start: 4;
+    grid-column-end: 8;
+    grid-row-start: 2;
+    grid-row-end: 7;
+    padding: 20px;
+}
+.side-panel {
+    grid-column-start: 8;
+    grid-column-end: 10;
+    grid-row-start: 2;
+    grid-row-end: 7;
+    padding: 20px;
+}
+.right-border-panel {
+    grid-column-start: 10;
+    grid-column-end: 11;
+    grid-row-start: 1;
+    grid-row-end: 7;
+}
+.projects-content-container {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 20px;
-    padding: 20px;
-}
-.side-panel {
-    grid-column-start: 7;
-    grid-column-end: 9;
-    grid-row-start: 3;
-    grid-row-end: 9;
-    padding: 20px;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 0;
 }
 .project-tile {
-    width: 30%;
+    width: 40%;
     height: auto;
+    /*max-height: 250px;*/
     flex: 1 1 auto;
+    overflow: hidden;
+    border-left: 5px solid rgb(244, 182, 27);
 }
-.projects > h1 {
+.projects-header, .side-headline {
     width: 100%;
+    height: 30px;
+    font-size: 20px;
 }
-.side-headline, .side-content-tile {
+.side-content-tile {
     width: 100%;
 }
 .project-tile, .side-content-tile {
@@ -72,21 +91,160 @@
     box-shadow: 1px 2px 3px 1px rgb(153, 149, 149);
     padding: 20px;
 }
+.side-content-tile {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
 .announcements {
     padding: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     border-bottom: 2px solid rgb(153, 149, 149);
 }
 .last-announcement {
     border: none;
     margin: 0;
 }
+.announcement-title, .announcement-content, .username, .usertag {
+    font-size: 14px;
+}
+.announcement-content {
+    margin-bottom: 10px;
+}
+.last-announcement>.announcement-content {
+    margin-bottom: 0;
+}
+.trending-headline {
+    margin-top: 20px;
+}
 .menu-item {
-    font-size: 24px;
-    font-weight: bold;
     width: 100%;
+    height: auto;
+    padding: 10px;
 }
 .bottom-menu {
     margin-top: 50px;
 }
+.menu-icon {
+    width: 24px;
+    height: auto;
+}
+.menu-option, .menu-icon, .dashboard-header, .dashboard-header-img {
+    display: inline-block;
+}
+.menu-option {
+    font-size: 20px;
+    font-weight: bold;
+    padding: 10px;
+    line-height: 20px;
+}
+.dashboard-header {
+    font-size: 24px;
+    font-weight: bold;
+    padding: 10px;
+}
+.dashboard-header-img {
+    width: 34px;
+    height: auto;
+}
+.admin-bar {
+    padding: 30px 40px 20px 40px;
+}
+.search-icon, .notification-icon {
+    width: 24px;
+    height: auto;
+}
+.admin-icon {
+    width: 40px;
+    height: auto;
+}
+.left-top-bar-container, .right-top-bar-container, .top-bar-left, .top-bar-right {
+    display: inline-block;
+}
+.left-top-bar-container {
+    width: 40%;
+}
+.right-top-bar-container {
+    float: right;
+    width: 30%;
+    text-align: right;
+}
+.search-bar {
+    border-radius: 10px;
+    background-color: rgb(237, 236, 236);
+    width: 90%;
+    height: 22px;
+    line-height: 20px;
+}
+.notification-icon, .admin-icon {
+    margin-right: 20px;
+}
+.admin-name {
+    font-size: 20px;
+    font-weight: bold;
+}
+.bottom-bar {
+    padding: 10px;
+    margin-top: 30px;
+}
+.admin-info, .admin-btns {
+    display: inline-block;
+}
+.admin-btns {
+    float: right;
+    margin-top: 30px;
+}
+.admin-btn {
+    border-radius: 20px;
+    width: 100px;
+    padding: 5px;
+    background-color: rgb(26, 171, 243);
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    border: none;
+    line-height: 20px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+.large-admin-icon, .admin-greeting {
+    display: inline-block;
+}
+.admin-greeting {
+    margin-left: 20px;
+}
+.large-admin-icon {
+    width: 60px;
+    height: auto;
+}
+.greeting {
+    font-size: 16px;
+    font-weight: bold;
+}
+.large-admin-name {
+    font-size: 28px;
+    font-weight: bold;
+}
+.admin-icon, .large-admin-icon, .userpic {
+    border-radius: 50%;
+}
+.userpic, .userinfo {
+    display: inline-block;
+}
+.userpic {
+    width: 40px;
+    height: auto;
+}
+.userinfo {
+    margin-left: 25px;
+}
+.trending {
+    margin-bottom: 10px;
+}
+.last-trending {
+    margin-bottom: 0;
+}
+
+
+
+
 
