Add font; adjust overall spacing of items

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     font-size: 16px;
     list-style-type: none;
+    font-family: 'Roboto';
 }
 .main-container {
     display: grid;
@@ -42,6 +43,7 @@
     grid-row-start: 1;
     grid-row-end: 2;
     max-height: 250px;
+    box-shadow: 0 4px 4px -2px rgb(153, 149, 149);
 }
 .projects {
     grid-column-start: 4;
@@ -56,6 +58,7 @@
     grid-row-start: 2;
     grid-row-end: 7;
     padding: 20px;
+    padding-left: 10px;
 }
 .right-border-panel {
     grid-column-start: 10;
@@ -68,7 +71,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 30px;
 }
 .project-tile {
     width: 40%;
@@ -107,19 +110,26 @@
 .announcement-title, .announcement-content, .username, .usertag {
     font-size: 14px;
 }
+.announcement-title {
+    font-weight: bold;
+    margin-bottom: 5px;
+}
 .announcement-content {
     margin-bottom: 10px;
+    font-size: 12px;
 }
 .last-announcement>.announcement-content {
     margin-bottom: 0;
 }
 .trending-headline {
+    margin-top: 30px;
+}
+.menu-list {
     margin-top: 20px;
 }
 .menu-item {
     width: 100%;
     height: auto;
-    padding: 10px;
 }
 .bottom-menu {
     margin-top: 50px;
@@ -132,13 +142,13 @@
     display: inline-block;
 }
 .menu-option {
-    font-size: 20px;
+    font-size: 18px;
     font-weight: bold;
-    padding: 10px;
     line-height: 20px;
+    padding: 10px;
 }
 .dashboard-header {
-    font-size: 24px;
+    font-size: 22px;
     font-weight: bold;
     padding: 10px;
 }
@@ -161,7 +171,7 @@
     display: inline-block;
 }
 .left-top-bar-container {
-    width: 40%;
+    width: 60%;
 }
 .right-top-bar-container {
     float: right;
@@ -202,7 +212,7 @@
     font-size: 14px;
     font-weight: bold;
     border: none;
-    line-height: 20px;
+    line-height: 24px;
     margin-left: 5px;
     margin-right: 5px;
 }
