--- a/styles.css
+++ b/styles.css
@@ -175,6 +175,11 @@
     width: 40px;
     height: auto;
 }
+.mode-switch-icon {
+    content: url("./icons/toggle-switch.svg");
+    width: 34px;
+    height: auto;
+}
 .left-top-bar-container, .right-top-bar-container, .top-bar-left, .top-bar-right {
     display: inline-block;
 }
@@ -194,7 +199,7 @@
     height: 22px;
     line-height: 20px;
 }
-.notification-icon, .admin-icon {
+.notification-icon, .admin-icon, .mode-switch-icon {
     margin-right: 20px;
 }
 .notification-icon {
@@ -291,8 +296,48 @@
     content: url("./icons/share-variant-outline.svg");
     transform: rotate(-90deg);
 }
-
-
+/*DARK MODE STYLES*/
+.dark-mode-main-container {
+    background-color: rgb(41, 39, 39);
+    color: rgb(237, 236, 236);
+}
+.dark-mode-border-panel {
+    background-color: rgb(67, 65, 65);
+}
+.dark-mode-dashboard-menu {
+    background-color: rgb(9, 59, 84);
+    color: rgb(245, 251, 255);
+}
+.dark-mode-admin-bar, .dark-mode-project-tile, .dark-mode-project-title, .dark-mode-side-content-tile {
+    background-color: rgb(93, 89, 89);
+}
+.dark-mode-project-info, .dark-mode-announcement-content, .dark-mode-usertag {
+    color: rgb(194, 193, 193);
+}
+.dark-mode-project-tile {
+    border-left: 5px solid rgba(244, 183, 27, 0.31);
+}
+.dark-mode-admin-btn {
+    background-color: rgb(9, 59, 84);
+}
+.dark-mode-fav-project {
+    content: url("./icons/star-plus-outline-light.svg");
+    margin-right: 15px;
+}
+.dark-mode-watch-project {
+    content: url("./icons/eye-plus-outline-light.svg");
+    margin-right: 15px;
+}
+.dark-mode-share-project {
+    content: url("./icons/share-variant-outline-light.svg");
+    transform: rotate(-90deg);
+}
+.dark-mode-notification-icon {
+    content: url("./icons/bell-ring-outline-light.svg");
+}
+.dark-mode-switch-icon {
+    content: url("./icons/toggle-switch-off-outline.svg");
+}
 
 
 
