--- a/styles.css
+++ b/styles.css
@@ -317,6 +317,12 @@
 .dark-mode-project-tile {
     border-left: 5px solid rgba(244, 183, 27, 0.31);
 }
+.dark-mode-search-bar {
+    background-color: rgb(148, 146, 146);
+}
+.dark-mode-search-icon {
+    content: url("./icons/magnify-light.svg");
+}
 .dark-mode-admin-btn {
     background-color: rgb(9, 59, 84);
 }
@@ -336,7 +342,7 @@
     content: url("./icons/bell-ring-outline-light.svg");
 }
 .dark-mode-switch-icon {
-    content: url("./icons/toggle-switch-off-outline.svg");
+    content: url("./icons/toggle-switch-off-light.svg");
 }
 
 
