--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
     font-family: 'Roboto';
 }
 .main-container {
+    min-height: 100vh;
     display: grid;
     grid-template-columns: repeat(11, minmax(100px, 1fr));
     grid-template-rows: repeat(6, minmax(1fr, 250px));
